--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,11 +1,130 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYK-T4-5dL">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Users-->
+        <scene sceneID="xjF-De-iF0">
+            <objects>
+                <tableViewController id="3ue-u4-RKn" customClass="PeopleTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="52p-LY-9Gq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="cQw-Zj-DsV" style="IBUITableViewCellStyleDefault" id="avp-yl-eKD">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="avp-yl-eKD" id="N8o-9r-8AH">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="cQw-Zj-DsV">
+                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="yuT-pi-3A4" kind="show" identifier="ShowDetail" id="IaS-EZ-IcJ"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="3ue-u4-RKn" id="JWS-X2-xnp"/>
+                            <outlet property="delegate" destination="3ue-u4-RKn" id="oza-T3-3jR"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Users" id="5yO-ws-hR6"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3l9-JB-AMJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="194" y="170"/>
+        </scene>
+        <!--People Detail View Controller-->
+        <scene sceneID="ZyN-QI-H0C">
+            <objects>
+                <viewController id="yuT-pi-3A4" customClass="PeopleDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="62Q-HN-Cvs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xhK-DS-Pfe">
+                                <rect key="frame" x="67" y="135" width="240" height="213"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="33O-6n-xWW">
+                                <rect key="frame" x="56" y="401" width="45" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6R2-f3-SAe">
+                                <rect key="frame" x="56" y="430" width="49" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AhD-Zl-cHE">
+                                <rect key="frame" x="56" y="459" width="41" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="33O-6n-xWW" firstAttribute="top" secondItem="xhK-DS-Pfe" secondAttribute="bottom" constant="53" id="0Ij-Pn-3jV"/>
+                            <constraint firstItem="33O-6n-xWW" firstAttribute="leading" secondItem="Soy-Ix-peK" secondAttribute="leading" constant="56" id="1XF-Rf-1b1"/>
+                            <constraint firstItem="Soy-Ix-peK" firstAttribute="trailing" secondItem="AhD-Zl-cHE" secondAttribute="trailing" constant="278" id="1lr-Fl-cYd"/>
+                            <constraint firstItem="xhK-DS-Pfe" firstAttribute="top" secondItem="Soy-Ix-peK" secondAttribute="top" constant="71" id="2YI-RB-WQJ"/>
+                            <constraint firstItem="6R2-f3-SAe" firstAttribute="top" secondItem="33O-6n-xWW" secondAttribute="bottom" constant="8" id="52J-Ba-jj9"/>
+                            <constraint firstItem="xhK-DS-Pfe" firstAttribute="leading" secondItem="Soy-Ix-peK" secondAttribute="leading" constant="67" id="E2z-FU-wu9"/>
+                            <constraint firstItem="Soy-Ix-peK" firstAttribute="trailing" secondItem="xhK-DS-Pfe" secondAttribute="trailing" constant="68" id="hTL-VQ-kzk"/>
+                            <constraint firstItem="Soy-Ix-peK" firstAttribute="bottom" secondItem="AhD-Zl-cHE" secondAttribute="bottom" constant="187" id="lh3-er-QS4"/>
+                            <constraint firstItem="AhD-Zl-cHE" firstAttribute="leading" secondItem="Soy-Ix-peK" secondAttribute="leading" constant="56" id="phl-Se-aE6"/>
+                            <constraint firstItem="6R2-f3-SAe" firstAttribute="leading" secondItem="Soy-Ix-peK" secondAttribute="leading" constant="56" id="qvN-iU-Coc"/>
+                            <constraint firstItem="Soy-Ix-peK" firstAttribute="trailing" secondItem="33O-6n-xWW" secondAttribute="trailing" constant="274" id="wB5-sZ-0pZ"/>
+                            <constraint firstItem="AhD-Zl-cHE" firstAttribute="top" secondItem="6R2-f3-SAe" secondAttribute="bottom" constant="8" id="xnM-mm-vrA"/>
+                            <constraint firstItem="Soy-Ix-peK" firstAttribute="trailing" secondItem="6R2-f3-SAe" secondAttribute="trailing" constant="270" id="z6h-Ou-Zlo"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Soy-Ix-peK"/>
+                    </view>
+                    <connections>
+                        <outlet property="emailLabel" destination="AhD-Zl-cHE" id="ukp-FC-Twa"/>
+                        <outlet property="imageView" destination="xhK-DS-Pfe" id="dW5-jr-RiG"/>
+                        <outlet property="nameLabel" destination="33O-6n-xWW" id="Hd8-ak-lHB"/>
+                        <outlet property="phoneLabel" destination="6R2-f3-SAe" id="K2x-N4-3l2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nq0-YY-zRt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="935" y="170"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="iXV-VP-pej">
+            <objects>
+                <navigationController id="BYK-T4-5dL" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e9L-Oc-Z1W">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="3ue-u4-RKn" kind="relationship" relationship="rootViewController" id="Hjm-tV-V9r"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PPe-Ef-qgd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-545" y="170"/>
+        </scene>
+    </scenes>
 </document>
