--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,11 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ttw-1y-2Mj">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Root View Controller-->
+        <scene sceneID="jaa-vU-8ud">
+            <objects>
+                <tableViewController id="W8Z-n8-WCI" customClass="PeopleTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="CfW-Tz-FKt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PersonCell" rowHeight="89" id="qpv-H7-v93" customClass="PeopleTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="89"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qpv-H7-v93" id="gxv-2d-FSC">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="88.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X13-NX-Ej0">
+                                            <rect key="frame" x="16" y="11" width="72" height="67"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="72" id="WHS-BO-c59"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uPu-AN-XNm">
+                                            <rect key="frame" x="96" y="34" width="263" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="X13-NX-Ej0" firstAttribute="top" secondItem="gxv-2d-FSC" secondAttribute="topMargin" id="0DM-jG-W4i"/>
+                                        <constraint firstItem="uPu-AN-XNm" firstAttribute="top" secondItem="gxv-2d-FSC" secondAttribute="topMargin" constant="23" id="1Yn-hN-BMD"/>
+                                        <constraint firstItem="X13-NX-Ej0" firstAttribute="leading" secondItem="gxv-2d-FSC" secondAttribute="leadingMargin" id="Fk8-eW-Fho"/>
+                                        <constraint firstItem="X13-NX-Ej0" firstAttribute="bottom" secondItem="gxv-2d-FSC" secondAttribute="bottomMargin" id="OIt-th-SJc"/>
+                                        <constraint firstItem="uPu-AN-XNm" firstAttribute="trailing" secondItem="gxv-2d-FSC" secondAttribute="trailingMargin" id="SMN-im-DYf"/>
+                                        <constraint firstItem="uPu-AN-XNm" firstAttribute="leading" secondItem="X13-NX-Ej0" secondAttribute="trailing" constant="8" symbolic="YES" id="WSG-QQ-Ixf"/>
+                                        <constraint firstItem="X13-NX-Ej0" firstAttribute="centerY" secondItem="uPu-AN-XNm" secondAttribute="centerY" id="ooT-Uu-pm3"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="uPu-AN-XNm" id="cwr-lM-He6"/>
+                                    <outlet property="personImageView" destination="X13-NX-Ej0" id="7OW-r0-BdP"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="W8Z-n8-WCI" id="KPc-4E-F7e"/>
+                            <outlet property="delegate" destination="W8Z-n8-WCI" id="c1U-eO-KLz"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="wc2-0n-lRQ"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ne1-Q7-v4d" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-116" y="165.06746626686657"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="l1g-dK-KXP">
+            <objects>
+                <navigationController id="ttw-1y-2Mj" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Nf3-TL-5mZ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="W8Z-n8-WCI" kind="relationship" relationship="rootViewController" id="PTy-0e-3Ai"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rzU-64-esl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1068" y="166"/>
+        </scene>
+    </scenes>
 </document>
